--- a/app/views/title_case/index.html.erb
+++ b/app/views/title_case/index.html.erb
@@ -1,4 +1,16 @@
-<div>
-  <h1 class="font-bold text-4xl">TitleCase#index</h1>
-  <p>Find me in app/views/title_case/index.html.erb</p>
+<h1 class="font-bold text-4xl text-black dark:text-white">title.love</h1>
+<p class="text-black dark:text-white">enter a title, get it cased.</p>
+<div data-controller="title-case">
+  <div class="my-4">
+    <input class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 w-full"
+           type="text"
+           data-title-case-target="input"
+           data-action="input->title-case#updateOutput"
+           placeholder="Enter your title here..."
+           aria-label="Title input"
+           autofocus />
+  </div>
+  <div>
+    <p data-title-case-target="output" class="font-bold text-2xl mb-4 dark:text-white"></p>
+  </div>
 </div>
