--- a/app/views/title_case/index.html.erb
+++ b/app/views/title_case/index.html.erb
@@ -20,5 +20,5 @@
     <span data-title-case-target="output" data-clipboard-target="source" class="font-bold text-2xl"></span>
   </div>
 
-  <p class="text-sm text-gray-500">A small app by <span class="underline"><%= link_to "Collin Donnell", "https://collin.blog" %></span>.</p>
+  <p class="text-sm text-gray-500">A small app by <%= link_to "Collin Donnell", "https://collin.blog", class: "link" %>.</p>
 </div>
