--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,7 +1,12 @@
 <nav>
   <div class="navbar bg-base-300">
-    <div class="flex-1">
-        <%= button_to "title.love", root_path, class: "btn btn-ghost text-xl" %>
+    <div class="flex-1 ml-4">
+      <div class="flex items-baseline gap-2">
+        <%= link_to root_path, class: "text-xl font-semibold text-black hover:underline" do %>
+          title.love
+        <% end %>
+        <span class="text-sm text-gray-600">enter a title, have it cased.</span>
+      </div>
     </div>
     <div class="flex-none">
       <% if logged_in? %>
