--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,3 +1,5 @@
+<h2 class="text-lg font-bold mb-3">Enter a title to format it instantly, or sign up to save your work.</h2>
+
 <div data-controller="title-case clipboard">
   <div class="my-4">
     <input class="input input-lg w-full"
@@ -10,13 +12,13 @@
            autofocus />
   </div>
   <div class="flex items-center gap-2 mb-2">
-    <button data-action="clipboard#copy" data-clipboard-target="button" class="hover:text-gray-400 active:text-gray-700" style="display: none;">
+    <button data-action="clipboard#copy" data-clipboard-target="button" class="hover:text-neutral-400 active:text-neutral-700" style="display: none;">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-        <path stroke-linecap="round" stroke-linejoin="round" d="M9 12h3.75M9 15h3.75M9 18h3.75m3 .75H18a2.25 2.25 0 0 0 2.25-2.25V6.108c0-1.135-.845-2.098-1.976-2.192a48.424 48.424 0 0 0-1.123-.08m-5.801 0c-.065.21-.1.433-.1.664 0 .414.336.75.75.75h4.5a.75.75 0 0 0 .75-.75 2.25 2.25 0 0 0-.1-.664m-5.8 0A2.251 2.251 0 0 1 13.5 2.25H15c1.012 0 1.867.668 2.15 1.586m-5.8 0c-.376.023-.75.05-1.124.08C9.095 4.01 8.25 4.973 8.25 6.108V8.25m0 0H4.875c-.621 0-1.125.504-1.125 1.125v11.25c0 .621.504 1.125 1.125 1.125h9.75c.621 0 1.125-.504 1.125-1.125V9.375c0-.621-.504-1.125-1.125-1.125H8.25ZM6.75 12h.008v.008H6.75V12Zm0 3h.008v.008H6.75V15Zm0 3h.008v.008H6.75V18Z" />
+        <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 17.25v3.375c0 .621-.504 1.125-1.125 1.125h-9.75a1.125 1.125 0 0 1-1.125-1.125V7.875c0-.621.504-1.125 1.125-1.125H6.75a9.06 9.06 0 0 1 1.5.124m7.5 10.376h3.375c.621 0 1.125-.504 1.125-1.125V11.25c0-4.46-3.243-8.161-7.5-8.876a9.06 9.06 0 0 0-1.5-.124H9.375c-.621 0-1.125.504-1.125 1.125v3.5m7.5 10.375H9.375a1.125 1.125 0 0 1-1.125-1.125v-9.25m12 6.625v-1.875a3.375 3.375 0 0 0-3.375-3.375h-1.5a1.125 1.125 0 0 1-1.125-1.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H9.75" />
       </svg>
     </button>
     <span data-title-case-target="output" data-clipboard-target="source" class="font-bold text-2xl"></span>
   </div>
 
-  <p class="text-sm text-gray-500">A small app by <%= link_to "Collin Donnell", "https://collin.blog", class: "link" %>.</p>
+  <p class="text-sm text-gray-500">A <em>premium</em> title casing experience by <%= link_to "Collin Donnell", "https://collin.blog", class: "link" %>.</p>
 </div>
