--- a/app/views/titles/index.html.erb
+++ b/app/views/titles/index.html.erb
@@ -1,7 +1,7 @@
 <div class="w-full max-w-3xl mx-auto px-4">
   <h1 class="font-bold text-4xl">Titles</h1>
   
-  <%= form_with model: Title.new, url: user_titles_path(user_id: @current_user.id), local: false, data: { controller: "title-case clipboard save" } do |f| %>
+  <%= form_with model: [current_user, Title.new], local: false, data: { controller: "title-case clipboard save" } do |f| %>
     <div class="my-4">
       <%= f.text_field :title, 
           class: "input input-lg w-full",
@@ -17,7 +17,7 @@
       <%= f.hidden_field :title_cased, data: { title_case_target: "hidden" } %>
     </div>
     <div class="flex items-center gap-2 mb-2">
-      <button data-action="clipboard#copy" data-clipboard-target="button" class="hover:text-gray-400 active:text-gray-700" style="display: none;">
+      <button data-action="clipboard#copy" data-clipboard-target="button" class="hover:text-neutral-400 active:text-neutral-700" style="display: none;">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
           <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 17.25v3.375c0 .621-.504 1.125-1.125 1.125h-9.75a1.125 1.125 0 0 1-1.125-1.125V7.875c0-.621.504-1.125 1.125-1.125H6.75a9.06 9.06 0 0 1 1.5.124m7.5 10.376h3.375c.621 0 1.125-.504 1.125-1.125V11.25c0-4.46-3.243-8.161-7.5-8.876a9.06 9.06 0 0 0-1.5-.124H9.375c-.621 0-1.125.504-1.125 1.125v3.5m7.5 10.375H9.375a1.125 1.125 0 0 1-1.125-1.125v-9.25m12 6.625v-1.875a3.375 3.375 0 0 0-3.375-3.375h-1.5a1.125 1.125 0 0 1-1.125-1.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H9.75" />
         </svg>
