Rubocop and colors

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="<%= @body_class %> min-h-screen h-full">
+  <body class="bg-base-200 min-h-screen h-full">
     <%= render "shared/nav" %>
     <main class="container mx-auto max-w-xl mt-6 px-5 flex flex-col">
       <% if flash.count %>
