--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,23 +1,30 @@
 <h2 class="text-lg font-bold mb-2">Enter a title to format it instantly, or sign up to save your work.</h2>
 
-<div data-controller="title-case clipboard">
+<div data-controller="title-case clipboard input-monitor"
+     data-input-monitor-target-id-value="clipboard-block">
   <div class="my-4">
-    <input class="input input-lg w-full"
+    <input id="title-input"
+           class="input input-lg w-full"
            type="text"
            data-title-case-target="input"
-           data-clipboard-target="input"
-           data-action="title-case#updateOutput clipboard#updateButtonState"
+           data-action="title-case#updateOutput input-monitor#inputChanged"
            placeholder="Enter your title here..."
            aria-label="Title input"
            autofocus />
   </div>
-  <div class="flex items-center gap-2 mb-2">
-    <button data-action="clipboard#copy" data-clipboard-target="button" class="hover:text-neutral-400 active:text-neutral-700" style="display: none;">
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-        <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 17.25v3.375c0 .621-.504 1.125-1.125 1.125h-9.75a1.125 1.125 0 0 1-1.125-1.125V7.875c0-.621.504-1.125 1.125-1.125H6.75a9.06 9.06 0 0 1 1.5.124m7.5 10.376h3.375c.621 0 1.125-.504 1.125-1.125V11.25c0-4.46-3.243-8.161-7.5-8.876a9.06 9.06 0 0 0-1.5-.124H9.375c-.621 0-1.125.504-1.125 1.125v3.5m7.5 10.375H9.375a1.125 1.125 0 0 1-1.125-1.125v-9.25m12 6.625v-1.875a3.375 3.375 0 0 0-3.375-3.375h-1.5a1.125 1.125 0 0 1-1.125-1.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H9.75" />
-      </svg>
-    </button>
-    <span data-title-case-target="output" data-clipboard-target="source" class="font-bold text-2xl"></span>
+  <div>
+    <div id="clipboard-block" 
+         data-controller="visibility"
+         data-visibility-target="element"
+         data-visibility-visible-value="false"
+         class="flex items-center gap-2 mb-2 hidden">
+      <button data-action="clipboard#copy" class="hover:text-neutral-400 active:text-neutral-700">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 17.25v3.375c0 .621-.504 1.125-1.125 1.125h-9.75a1.125 1.125 0 0 1-1.125-1.125V7.875c0-.621.504-1.125 1.125-1.125H6.75a9.06 9.06 0 0 1 1.5.124m7.5 10.376h3.375c.621 0 1.125-.504 1.125-1.125V11.25c0-4.46-3.243-8.161-7.5-8.876a9.06 9.06 0 0 0-1.5-.124H9.375c-.621 0-1.125.504-1.125 1.125v3.5m7.5 10.375H9.375a1.125 1.125 0 0 1-1.125-1.125v-9.25m12 6.625v-1.875a3.375 3.375 0 0 0-3.375-3.375h-1.5a1.125 1.125 0 0 1-1.125-1.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H9.75" />
+        </svg>
+      </button>
+      <span data-title-case-target="output" data-clipboard-target="source" class="font-bold text-2xl"></span>
+    </div>
   </div>
 
   <p class="text-sm text-gray-500">A <em>premium</em> title casing experience by <%= link_to "Collin Donnell", "https://collin.blog", class: "link" %>.</p>
