Show save button

--- a/app/views/titles/index.html.erb
+++ b/app/views/titles/index.html.erb
@@ -28,7 +28,7 @@
           </svg>
         </button>
         <span data-title-case-target="output" data-clipboard-target="source" class="font-bold text-2xl"></span>
-        <%= f.submit "Save", class: "btn btn-primary ml-auto", data: { save_target: "button" }, style: "display: none;" %>
+        <%= f.submit "Save", class: "btn btn-primary ml-auto", data: { save_target: "button" } %>
       </div>
     <% end %>
   </div>
