--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
     <%= render "shared/nav" %>
     <main class="container mx-auto max-w-xl mt-6 px-5 flex flex-col">
       <% if flash.count %>
-        <div class="mb-4">
+        <div class="mb-4" id="flash-messages">
           <% flash.each do |type, msg| %>
             <div role="alert" class="rounded alert <%= type == "notice" ? "alert-success" : "alert-warning" %>">
               <%= msg %>
