Fix controllers and use outlet for getting visibility controller

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,7 +1,7 @@
 <h2 class="text-lg font-bold mb-2">Enter a title to format it instantly, or sign up to save your work.</h2>
 
 <div data-controller="title-case clipboard input-monitor"
-     data-input-monitor-target-id-value="clipboard-block">
+     data-input-monitor-visibility-outlet="#clipboard-block">
   <div class="my-4">
     <input id="title-input"
            class="input input-lg w-full"
