--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,15 +25,7 @@
   <body class="bg-base-200 min-h-screen h-full">
     <%= render "shared/nav" %>
     <main class="container mx-auto max-w-xl mt-6 px-5 flex flex-col">
-      <div id="toasts" data-controller="toasts", data-action="clipboard:copy@window->toasts#displayToast">
-        <template id="toast-template" data-toasts-target="template">
-          <div class="toast toast-top toast-center mt-8">
-            <div class="alert alert-info">
-              <span id="content">hello</span>
-            </div>
-          </div>
-        </template>
-      </div>
+      <%= render "shared/toasts" %>
       <% if flash.count %>
         <div class="mb-4" id="flash-messages">
           <% flash.each do |type, msg| %>
