--- a/app/views/titles/_inline_new_form.html.erb
+++ b/app/views/titles/_inline_new_form.html.erb
@@ -1,6 +1,6 @@
 <div data-controller="title-case clipboard input-monitor"
       data-input-monitor-visibility-outlet="#clipboard-block">
-      <%= form_with model: [current_user, title], local: false do |f| %>
+      <%= form_with model: [Current.user, title], local: false do |f| %>
         <div class="my-4">
           <%= f.text_field :title,
               id: "title-input",
