--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -9,7 +9,7 @@
       </div>
     </div>
     <div class="flex-none">
-      <% if logged_in? %>
+      <% if authenticated? %>
         <%= link_to "Logout", session_path, data: {turbo_method: :delete}, class: "btn" %>
       <% else %>
         <%= link_to "Sign Up", new_user_path, class: "btn btn-secondary" %>
