--- a/app/views/titles/edit.html.erb
+++ b/app/views/titles/edit.html.erb
@@ -1,7 +1,7 @@
 <div>
   <h1 class="font-bold text-4xl">Edit Title</h1>
   <%= turbo_frame_tag @title do %>
-      <%= form_with model: [current_user, @title], local: false, data: { controller: "title-case" } do |f| %>
+      <%= form_with model: [Current.user, @title], local: false, data: { controller: "title-case" } do |f| %>
         <div class="my-4 mx-4 space-y-4">
           <div class="form-group">
             <%= f.text_field :title,
@@ -22,7 +22,7 @@
             <span data-title-case-target="output" class="font-bold text-lg"><%= @title.title_cased %></span>
           </div>
           <div class="ml-auto">
-            <%= link_to "Cancel", user_titles_path(current_user), class: "btn btn-secondary" %>
+            <%= link_to "Cancel", user_titles_path(Current.user), class: "btn btn-secondary" %>
             <%= f.submit "Save", class: "btn btn-primary" %>
           </div>
         </div>
